# bakdata-project-templates

./: README.md  init.sh
azure/gradle/: build.yml  create_tag_version.yml  upload_release.yml  upload_snapshot.yml
azure/python/: python-artifact.yml
java-gradle/: .travis.yml  README.md  build.gradle.kts  post-init.sh
java-gradle/travis/: setup_deploy_key.sh
templates/java-gradle/: azure-pipelines.yml  post-init.sh
templates/python/: .pre-commit-config.yaml  pyproject.toml  run_mypy.sh  setup.cfg
templates/python-poetry/: pyproject.toml  run_mypy.sh
templates/python/.github/workflows/: ci.yaml  pre-commit.yaml  publish.yaml  python-poetry-bump-version.yaml  python-poetry-release.yaml  python-setup-poetry.yaml
templates/python/hooks/: hook_generate-fetchers.sh
