[tool.poetry]
name = ""
version = "0.0.0"
description = ""
license = ""
authors = ["bakdata"]
readme = "README.md" # Could also do ["path/to/README0.md", "path/to/README1.md"]
keywords = []

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.3.4"
pyright = "^1.1.355"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
pytest-mock = "^3.14.0"
pytest-clarity = "^1.0.1"
pytest-cov = "^5.0.0"

# [tool.poetry.scripts]
# start = "main:start"

[tool.ruff]
# E203: whitespace before ':' -- Not PEP8 compliant, black won't correct it
# E501: Line too long -- Clashes with `black`
ignore = ["E203", "E501"]
# For a list of all possible rules visit https://beta.ruff.rs/docs/rules/
# Pyflakes(F), pycodestyle(E,W), mccabe(C90), isort(I), pyupgrade(UP), ruff(RUF)
select = ["F", "E", "W", "C90", "I", "UP", "RUF"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
