[tool.poetry]
name = ""
version = "0.0.0"
description = ""
license = "MIT"
authors = ["bakdata"]
readme = "README.md" # Could also do ["path/to/README0.md", "path/to/README1.md"]

# TODO
# repository = ""
# documentation = ""
# keywords = []
# classifiers = []

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
flake8 = "^6.0.0"
isort = "^5.11.4"
mypy = "^0.991"
pytest = "^7.2.0"
pre-commit = "^2.21.0"
pytest-asyncio = "^0.20.3"
pytest-clarity = "^1.0.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"

# [tool.poetry.scripts]
# start = "main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
