[tool.poetry]
name = ""
version = ""
description = ""
license = ""
authors = ["bakdata"]
# maintainers = ["bakdata"]
readme = "README.md" # Could also do ["path/to/README0.md", "path/to/README1.md"]
# homepage = ""
repository = ""
documentation = ""
keywords = []
classifiers = []
# packages=[]
# include=[]
# exclude=[]

[tool.poetry.dependencies]
python = "^3.10"
# loguru = "^0.5.3"
# matplotlib = "^3.4.3"
# networkx = "^2.6.3"
# dynaconf = "^3.1.7"
# httpx = "^0.20.0"
# pydantic = "^1.9.1"
# fastapi-utils = "^0.2.1"
# fastapi = "^0.78.0"
# uvicorn = { extras = ["standard"], version = "^0.15.0" }
# pygraphviz = "^1.7"
# confluent-kafka = "^1.9.2"
# cachetools = "^4.2.2"
# kubernetes-asyncio = "^23.6.0"

[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
flake8 = "^4.0.1"
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pre-commit = "^2.15.0"
pytest-asyncio = "^0.20.1"
pytest-clarity = "^1.0.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.6.1"
# respx = "^0.18.0"
# requests = "^2.27.1"

[tool.poetry.scripts]
start = "main:start"

[tool.poetry.urls]
"Bug Tracker" = ""

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"