[tool.poetry]
name = ""
version = ""
description = ""
license = ""
authors = ["bakdata"]
readme = "README.md" # Could also do ["path/to/README0.md", "path/to/README1.md"]

repository = ""
documentation = ""
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
mypy = "^0.981"
flake8 = "^4.0.1"
black = "^22.6.0"
isort = "^5.10.1"
pytest = "^7.2.0"
pre-commit = "^2.15.0"
pytest-asyncio = "^0.20.1"
pytest-clarity = "^1.0.1"
pytest-cov = "^4.0.0"
pytest-mock = "^3.6.1"

[tool.poetry.scripts]
start = "main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"